# portfolio

./: .gitignore  .gitmodules  Cargo.toml  README.md  dev-config.yml  docker-compose.yml  justfile
crates/: justfile
crates/oci-distribution-test/: Cargo.toml
crates/oci-distribution-test/src/: errors.rs  lib.rs  loader.rs  testdata.rs  tests.rs
crates/portfolio/: Cargo.toml
crates/portfolio/src/: config.rs  main.rs
crates/portfolio_backend_postgres/: Cargo.toml
crates/portfolio_backend_postgres/src/: blobs.rs  config.rs  errors.rs  lib.rs  manifests.rs  repositories.rs  upload_sessions.rs
crates/portfolio_backend_postgres/src/metadata/: postgres.rs  types.rs
crates/portfolio_core/: Cargo.toml
crates/portfolio_core/src/: errors.rs  lib.rs  object_body.rs  oci_digest.rs  registry.rs  stream.rs
crates/portfolio_http/: Cargo.toml
crates/portfolio_http/src/: blobs.rs  errors.rs  headers.rs  lib.rs  manifests.rs  portfolio.rs  referrers.rs  tags.rs
crates/portfolio_objectstore/: Cargo.toml
crates/portfolio_objectstore/src/: config.rs  errors.rs  lib.rs
crates/portfolio_objectstore/src/s3/: mod.rs
db/postgres/migrations/: 20220330014742_introduce-initial-db-models.down.sql  20220330014742_introduce-initial-db-models.up.sql  20220428195248_add-chunk-info-to-upload-sessions.down.sql  20220428195248_add-chunk-info-to-upload-sessions.up.sql  20220429032431_add-object-key-to-blobs-table.down.sql  20220429032431_add-object-key-to-blobs-table.up.sql
docs/: architecture.md  conformance.md  dev.md
objectstore/: Cargo.toml
objectstore/src/: lib.rs
objectstore/src/s3/: mod.rs
portfolio/: Cargo.toml
portfolio/src/: config.rs  lib.rs  oci_digest.rs  portfolio.rs  registry.rs  sha512.rs
portfolio/src/http/: blobs.rs  mod.rs  referrers.rs
portfolio/src/registry/: mod.rs  types.rs
portfolio/src/registry/impls/postgres_s3/: config.rs  mod.rs
portfolio/src/registry/impls/postgres_s3/metadata/: mod.rs  postgres.rs
portfolio/src/registry/impls/postgres_s3/objects/s3/: logging.rs  mod.rs
portfolio_postgres-s3/: Cargo.toml  justfile
portfolio_postgres-s3/src/: blobs.rs  config.rs  errors.rs  lib.rs  manifests.rs  repositories.rs
portfolio_postgres-s3/src/metadata/: mod.rs  postgres.rs  types.rs
portfolio_postgres-s3/src/objects/: mod.rs  traits.rs
portfolio_postgres-s3/src/objects/s3/: mod.rs
portfoliod/: Cargo.toml
portfoliod/src/: config.rs  main.rs
scripts/: minio-init.bash
src/: config.rs  errors.rs  lib.rs  main.rs  oci_digest.rs  portfolio.rs  sha256.rs
src/http/: blobs.rs  headers.rs  manifests.rs  mod.rs  referrers.rs  tags.rs
src/http/middleware/: logging.rs  mod.rs
src/metadata/: mod.rs  postgres.rs  types.rs
src/objects/: chunks.rs  mod.rs  object_body.rs  s3.rs  session.rs
src/registry/: blobs.rs  manifests.rs  mod.rs  registries.rs  repositories.rs  session.rs  types.rs
src/registry/impls/: mod.rs
src/registry/impls/postgres_s3/: blobs.rs  config.rs  errors.rs  manifests.rs  mod.rs  repositories.rs
src/registry/impls/postgres_s3/metadata/: mod.rs  postgres.rs  types.rs
src/registry/impls/postgres_s3/objects/: mod.rs  object_body.rs  traits.rs
src/registry/impls/postgres_s3/objects/s3/: mod.rs
src/registry/metadata/: mod.rs  postgres.rs  types.rs
src/registry/objects/: mod.rs  object_body.rs  s3.rs  traits.rs
src/registry/objects/s3/: logging.rs  mod.rs
