[package]
name = "portfolio"
version = "0.0.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
description = "placeholder for Registry API implementation in rust"
repository = "https://github.com/waynr/portfolio"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "portfolio"
path = "src/lib.rs"

[[bin]]
name = "portfolio"
path = "src/main.rs"

[dependencies]

axum = { version = "0.4", features = [ "headers" ] }
axum-macros = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
tokio = { version = "1.17", features = [ "full" ] }
tower = "0.4"

sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "migrate", "json", "chrono", "uuid" ] }
#sqlx = { path = "../sqlx", features = [ "runtime-tokio-native-tls", "postgres", "migrate" ] }
chrono = "~0.4"
uuid = { version = "~0.8", features = [ "v4" ] }

http = "0.2"
http-body = "0.4"
aws-config = "0.9.0"
aws-types = "0.9.0"
aws-sdk-s3 = "0.9.0"
aws-smithy-client = "~0.39"
futures-core = "0.3"

# RustCrypto
sha2 = { version = "0.10", features = [ "compress" ] }
digest = { version = "0.10" }
#sha2 = { version = "0.10", path = "../RustCrypto/hashes/sha2", features = [ "compress" ] }
#digest = { version = "0.10", path = "../RustCrypto/traits/digest" }

thiserror = "1"
serde = "1"
serde_yaml = "0.8"
serde_json = "~1.0"

# OCI & Distribution Spec
oci-spec = "0.5"
