[package]
name = "portfolio"
version = "0.0.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
description = "placeholder for Registry API implementation in rust"
repository = "https://github.com/waynr/portfolio"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "portfolio"
path = "src/lib.rs"

[[bin]]
name = "portfolio"
path = "src/main.rs"

[dependencies]

axum = { version = "0.6", features = [ "headers" ] }
hyper = { version = "0.14", features = [ "full" ] }
tokio = { version = "1.17", features = [ "full" ] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }

sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "migrate", "json", "chrono", "uuid" ] }
#sqlx = { path = "../sqlx", features = [ "runtime-tokio-native-tls", "postgres", "migrate" ] }
chrono = "~0.4"
uuid = { version = "~0.8", features = [ "v4" ] }

http = "0.2"
http-body = "0.4"
headers = "0.3.9"

aws-config = "0.56.1"
aws-types = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-s3 = "0.31.2"
aws-smithy-client = "0.56.1"

futures-core = "0.3"
async-trait = "0.1.56"

# RustCrypto
sha2 = { version = "0.10", features = [ "compress" ] }
digest = { version = "0.10" }

clap = { version = "4.4.4", features = [ "derive" ] }
thiserror = "1"
serde = "1"
serde_yaml = "0.8"
serde_json = "~1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

# OCI & Distribution Spec
oci-spec = "0.5"
