[package]
name = "portfolio-objectstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "portfolio_objectstore"
path = "src/lib.rs"

[dependencies]

async-trait = "0.1.56"
futures-core = "0.3"

http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }

uuid = { version = "1.4", features = [ "v4" ] }
bytes = "1.5"
serde = { version = "1", features = [ "derive" ] }

aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-s3 = "0.31.2"

thiserror = "1"
tracing = "0.1"
