[package]
name = "portfolio"
version = "0.0.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
description = "placeholder for Registry API implementation in rust"
repository = "https://github.com/waynr/portfolio"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "portfolio"
path = "src/lib.rs"

[dependencies]

#axum = { version = "0.6", features = [ "headers" ] }
axum = { path = "/home/wayne/projects/tokio-rs/axum/axum", features = [ "headers" ] }
hyper = { version = "0.14", features = [ "full" ] }
tokio = { version = "1.17", features = [ "full" ] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "set-header"] }

chrono = "~0.4"
uuid = { version = "1.4", features = [ "v4" ] }

http = "0.2"
http-body = "0.4"
headers = "0.3.9"
bytes = "1.5"

# TODO: implement Session/Chunk traits to abstract over those in the portfolio
# core library
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls", "postgres", "migrate", "json", "chrono", "uuid" ] }
sea-query = { version = "0.30", features = [ "with-json", "with-uuid", "backend-postgres" ] }

async-trait = "0.1.56"
futures-core = "0.3"

sha2 = { version = "0.10", features = [ "compress" ] }
digest = { version = "0.10" }

regex = "1.9"
once_cell = "1.4"

clap = { version = "4.4.4", features = [ "derive" ] }
thiserror = "1"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
serde_json = "~1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

# OCI & Distribution Spec
oci-spec = { path = "/home/wayne/projects/containers/oci-spec-rs" }

[dev-dependencies]

rstest = "0.17.0"
