[package]
name = "portfolio_postgres-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "portfolio_pgs3"
path = "src/lib.rs"

[dependencies]

portfolio = { path = "../portfolio" }

#axum = { version = "0.6", features = [ "headers" ] }
axum = { path = "/home/wayne/projects/tokio-rs/axum/axum", features = [ "headers" ] }
hyper = { version = "0.14", features = [ "full" ] }
tokio = { version = "1.17", features = [ "full" ] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "set-header"] }

sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls", "postgres", "migrate", "json", "chrono", "uuid" ] }
#sqlx = { path = "../sqlx", features = [ "runtime-tokio-native-tls", "postgres", "migrate" ] }
sqlx-postgres = { version = "0.7.2" }
sea-query = { version = "0.30", features = [ "with-json", "with-uuid", "backend-postgres" ] }
sea-query-binder = { version = "0.5", features = [ "sqlx-postgres", "with-json", "with-uuid" ] }
chrono = "~0.4"
uuid = { version = "1.4", features = [ "v4" ] }

http = "0.2"
http-body = "0.4"
headers = "0.3.9"
bytes = "1.5"

aws-config = "0.56.1"
aws-types = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-s3 = "0.31.2"
aws-smithy-client = "0.56.1"

futures-core = "0.3"
async-trait = "0.1.56"

regex = "1.9"
once_cell = "1.4"

thiserror = "1"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
serde_json = "~1.0"

tracing = "0.1"

# OCI & Distribution Spec
oci-spec = { path = "/home/wayne/projects/containers/oci-spec-rs" }
