[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "portfolio"
path = "src/main.rs"

[dependencies]

portfolio-backend-postgres = { path = "../portfolio_backend_postgres" }
portfolio-core = { path = "../portfolio_core" }
portfolio-http = { path = "../portfolio_http" }

axum = { path = "/home/wayne/projects/tokio-rs/axum/axum", features = [ "headers" ] }
tokio = { version = "1.17", features = [ "full" ] }

clap = { version = "4.4.4", features = [ "derive" ] }
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
