[package]
name = "portfolio-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "portfolio_http"
path = "src/lib.rs"

[dependencies]

portfolio-core = { path = "../portfolio_core" }

axum = { version = "0.6", features = [ "headers" ] }
hyper = { version = "0.14", features = [ "full" ] }
tower-http = { version = "0.4", features = ["trace", "set-header"] }

uuid = { version = "1.4", features = [ "v4" ] }

http = "0.2"
http-body = "0.4"
headers = "0.3.9"

thiserror = "1"
serde = { version = "1", features = [ "derive" ] }

tracing = "0.1"

# OCI & Distribution Spec
oci-spec = "0.6"
